# life-context-vault

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/workflows/: product-check.yml  release.yml
.superpowers/sdd/: correction-a2-report.md  p4-p0minors-report.md  task-7-report.md  task-D1-report.md  task-D2-report.md
browser-extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
deploy/relay/: Caddyfile  Dockerfile  compose.env.example  compose.yaml  relay.env.example
docs/: browser-capture-extension.md  data-deletion.md  deep-research-life-context-vault-2026-06-11.md  hosted-relay-deployment.md  http-mcp-relay.md  life-context-vault-architecture.md  life-context-vault-data-model.md  life-context-vault-product-design.md  local-mcp-sidecar.md  poc-implementation-status.md  privacy-policy.md  product-grade-implementation-status.md  public-release-progress.md  relay-operations.md  release-and-signing.md  research-personal-ai-context-2026-06-11.md  web-ai-connector-registration.md
docs/design/: quiet-vault-home.html
docs/superpowers/plans/: 2026-06-21-context-vault-ux-redesign.md  2026-06-21-phase-de-implementation.md  2026-06-21-ui-phase-b-home-timeline.md  2026-06-21-ui-reconstruction.md  2026-06-22-failsafe-classification-allowlist-gate.md  2026-06-23-classifier-recall-expansion.md  2026-06-23-improvement-sweep.md  2026-06-23-p2-delivery-notifications.md  2026-06-23-simplify-ux-phase1.md
docs/superpowers/specs/: 2026-06-22-north-star-and-improvement-plan.md  2026-06-23-simplify-ux-design.md
scripts/: check-hosted-relay-config.mjs  hosted-relay-smoke.mjs  init-hosted-relay-config.mjs  prepare-tauri-sidecars.mjs  run-product-release-checks.mjs  run-relay-smoke.mjs  run-relay-sse-soak.mjs  run-tauri-with-sidecars.mjs  web-ai-connector-packet.mjs  write-native-host-manifest.mjs
src/: App.tsx  aiAccessUi.test.ts  batchApproval.test.ts  batchApproval.ts  main.tsx  managedRelay.test.ts  managedRelay.ts  memoryStatus.test.ts  memoryStatus.ts  nativeStorage.ts  onboarding.ts  runtimePreferences.ts  sensitivity.test.ts  sensitivity.ts  sensitivityBuckets.test.ts  sensitivityBuckets.ts  sourceUpload.test.ts  sourceUpload.ts  styles.css  types.ts  vault.test.ts  vault.ts
src-tauri/: Cargo.toml  entitlements.mac.plist  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: embeddings.rs  lib.rs  main.rs  mcp_stdio.rs  vault_backup.rs  vault_crypto.rs  vault_recovery.rs
src/components/: BoundaryRule.tsx  Button.tsx  Card.tsx  Chip.tsx  DetailsDisclosure.tsx  EmptyState.tsx  HomeTimeline.test.tsx  HomeTimeline.tsx  Metric.tsx  NavButton.tsx  PageHeader.tsx  Rail.tsx  Seal.tsx  SearchField.tsx  SectionDivider.tsx  SensitivityBadge.tsx  Tag.tsx  ThemeToggle.tsx  Toggle.tsx  VaultStatus.tsx  _gallery.tsx
src/i18n/: en.ts  index.test.ts  index.ts  ja.ts
src/lib/: formatVaultError.test.ts  formatVaultError.ts
src/styles/: tokens.css
src/views/: ConnectView.tsx  IngestView.tsx
