[package]
name = "life-context-vault"
version = "0.1.0"
description = "Local-first life context vault PoC"
authors = ["Kota"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "life-context-vault"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "life_context_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "life-context-vault"
path = "src/main.rs"

[[bin]]
name = "lcv-mcp"
path = "src/bin/lcv-mcp.rs"

[[bin]]
name = "lcv-relay"
path = "src/bin/lcv-relay.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
