[package]
name = "life-context-vault"
version = "0.1.0"
description = "Local-first life context vault"
authors = ["Kota"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "life-context-vault"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "life_context_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "life-context-vault"
path = "src/main.rs"

[[bin]]
name = "lcv-mcp"
path = "src/bin/lcv-mcp.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rusqlite = { version = "0.40.1", features = ["bundled-sqlcipher-vendored-openssl"] }
base64 = "0.22.1"
sha2 = "0.10.9"
hmac = "0.12.1"
getrandom = "0.2"
tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
pdf-extract = "0.7.12"
quick-xml = "0.31.0"
zip = "0.6.6"
ureq = { version = "2.12.1", default-features = false, features = ["tls", "native-certs"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
aes-gcm = "0.10"
sqlite-vec = "0.1"
